Sintaxis.txt
* --> Pueden existir más de una operacion como Termino
OJO-> P_CLAVE en minusculas


Expresion       :   P_CLAVE: BOX VAR_IDEN ASIGNAR Expresion
                :   Exp-Comp ( (P_CLAVE: AND|P_CLAVE: OR|P_CLAVE: NAND|P_CLAVE: NOR|P_CLAVE: XOR) Exp-Comp)*

Exp-Comp        :   (P_CLAVE: NOT) Exp-Comp
                :   Exp-Aritm ((D_ASIGNAR|MAYOR_QUE|MAYOR_IGUAL|MENOR_QUE|MENOR_IGUAL) Exp-Aritm)*

Exp-Aritm       :   Termino (MAS|MENOS Termino)* 

Termino         :   Factor (POR|ENTRE Factor)* 

Factor          :   (MAS|MENOS) Factor
                :   Potencia

Potencia        :   llamada (POTENCIA Factor)*

llamada         :   Atomico (IZQPAREN (Expresion (COMMA Expresion)*)? DERPAREN)

Atomico         :   (ENTERO|REAL)
                :   IZQPAREN Expresion DERPAREN

IF-exp          :   P_CLAVE: WHEN Expresion P_CLAVE: DO
                    IZQBLOQ (P_CLAVE: OTHER-WHEN Expresion P_CLAVE: DO IZQBLOQ Expresion DERBLOQ)*
                    (P_CLAVE: OTHER-CASE IZQBLOQ Expresion DERBLOQ)?
                 
FOR-expr:       :   P_CLAVE: WHEEL VAR_IDEN ASIGNAR Expresion, P_CLAVE: LIMIT Expresion
                    (P_CLAVE: FREQ Expresion)? 
                    P_CLAVE: DO Expresion IZQBLOQ Expresion DERBLOQ

WHILE-expr      :   P_CLAVE: WHEEL-WHILE Expresion P_CLAVE: DO Expresion
                :   IZQBLOQ Expresion DERBLOQ

Def-Fun-expr    :   P_CLAVE: TASK VAR_IDEN?
                :   IZQPAREN (VAR_IDEN (COMMA VAR_IDEN)*)? DERPAREN
                :   FLECHA_DER 
                
